--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 		<section class="navbar"><i class="fa-solid fa-bars"></i></section>
 			<ul>
-				<li><a href="./Project_7(main).html" target="_self">Home</a></li>
+				<li><a href="./index.html" target="_self">Home</a></li>
 				<li><a href="./P7(about).html" target="_blank">About&nbsp;Us</a></li>
 				<li><a href="./P7(contact).html" target="_parent">Contact&nbsp;us</a></li>
 			</ul>
